crates/etas_tests/fixtures/compiler/projects/negative/source_root_mismatch/src/app/main.es
module app.main;

flow main(args: Array<string>) -> i32 ![]
{
    return 0;
}
